--- a/freelance/index.html.twig
+++ b/freelance/index.html.twig
@@ -1,39 +1,272 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Freelance {% endblock %}
+{% extends 'frontoffice/base.html.twig' %}
 
 {% block main %}
-    <h1>Freelance </h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Salary</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for freelance in freelances %}
-            <tr>
-                <td>{{ freelance.id }}</td>
-                <td>{{ freelance.title }}</td>
-                <td>{{ freelance.description }}</td>
-                <td>{{ freelance.salary }}</td>
-                <td>
-                    <a href="{{ path('freelance_show', {'id': freelance.id}) }}">show</a>
-                    <a href="{{ path('freelance_edit', {'id': freelance.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('freelance_new') }}">Create new</a>
+    <div class="main-section">
+        <div class="container">
+            <div class="main-section-data">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="filter-secs">
+                            <div class="filter-heading">
+                                <h3>Filters</h3>
+                                <a href="#" title="">Clear all filters</a>
+                            </div><!--filter-heading end-->
+                            <div class="paddy">
+                                <div class="filter-dd">
+                                    <div class="filter-ttl">
+                                        <h3>Search</h3>
+                                    </div>
+                                    <form action="#" method="get">
+                                        <div class="input-group">
+                                            <!-- USE TWITTER TYPEAHEAD JSON WITH API TO SEARCH -->
+                                            <input class="form-control" id="system-search" name="q" placeholder="Search for" required>
+                                            <span class="input-group-btn">
+                                          <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+                                            </span>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="filter-dd">
+                                    <div class="filter-ttl">
+                                        <h3>Availabilty</h3>
+                                        <a href="#" title="">Clear</a>
+                                    </div>
+                                    <ul class="avail-checks">
+                                        <li>
+                                            <input type="radio" name="cc" id="c1">
+                                            <label for="c1">
+                                                <span></span>
+                                            </label>
+                                            <small>Hourly</small>
+                                        </li>
+                                        <li>
+                                            <input type="radio" name="cc" id="c2">
+                                            <label for="c2">
+                                                <span></span>
+                                            </label>
+                                            <small>Part Time</small>
+                                        </li>
+                                        <li>
+                                            <input type="radio" name="cc" id="c3">
+                                            <label for="c3">
+                                                <span></span>
+                                            </label>
+                                            <small>Full Time</small>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="filter-dd">
+                                    <div class="filter-ttl">
+                                        <h3>Job Type</h3>
+                                        <a href="#" title="">Clear</a>
+                                    </div>
+                                    <form class="job-tp">
+                                        <select>
+                                            <option>Select a job type</option>
+                                            <option>Select a job type</option>
+                                            <option>Select a job type</option>
+                                            <option>Select a job type</option>
+                                        </select>
+                                        <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                    </form>
+                                </div>
+                                <div class="filter-dd">
+                                    <div class="filter-ttl">
+                                        <h3>Pay Rate / Hr ($)</h3>
+                                        <a href="#" title="">Clear</a>
+                                    </div>
+                                    <div class="rg-slider">
+                                        <input class="rn-slider slider-input" type="hidden" value="5,50" />
+                                    </div>
+                                    <div class="rg-limit">
+                                        <h4>1</h4>
+                                        <h4>100+</h4>
+                                    </div><!--rg-limit end-->
+                                </div>
+                                <div class="filter-dd">
+                                    <div class="filter-ttl">
+                                        <h3>Experience Level</h3>
+                                        <a href="#" title="">Clear</a>
+                                    </div>
+                                    <form class="job-tp">
+                                        <select>
+                                            <option>Select a experience level</option>
+                                            <option>3 years</option>
+                                            <option>4 years</option>
+                                            <option>5 years</option>
+                                        </select>
+                                        <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                    </form>
+                                </div>
+                                <div class="filter-dd">
+                                    <div class="filter-ttl">
+                                        <h3>Countries</h3>
+                                        <a href="#" title="">Clear</a>
+                                    </div>
+                                    <form class="job-tp">
+                                        <select>
+                                            <option>Select a country</option>
+                                            <option>United Kingdom</option>
+                                            <option>United States</option>
+                                            <option>Russia</option>
+                                        </select>
+                                        <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                    </form>
+                                </div>
+                            </div>
+                        </div><!--filter-secs end-->
+                    </div>
+                    <div class="col-lg-6" >
+                        <div class="main-ws-sec">
+                            <div class="posts-section">
+                                {% for freelance in freelances %}
+                                <div class="post-bar">
+                                    <div class="post_topbar">
+                                        <div class="usy-dt">
+                                            <div class="usy-name">
+                                                {{ freelance.project }}
+                                            </div>
+                                        </div>
+                                        <!--<div class="ed-opts">
+                                            <a href="#" title="" class="ed-opts-open"><i class="la la-ellipsis-v"></i></a>
+                                            <ul class="ed-options">
+                                                <li><a href="#" title="">Edit Post</a></li>
+                                                <li><a href="#" title="">Unsaved</a></li>
+                                                <li><a href="#" title="">Unbid</a></li>
+                                                <li><a href="#" title="">Close</a></li>
+                                                <li><a href="#" title="">Hide</a></li>
+                                            </ul>
+                                        </div>-->
+                                    </div>
+                                    <div class="sd-title">
+                                        {{ freelance.title }}
+                                        <ul class="job-dt">
+                                            <li><span>Salary {{ freelance.salary }} </span></li>
+                                        </ul>
+                                        <p>{{ freelance.description }} <a href="#" title="">view more</a></p>
+                                        <ul class="skill-tags">
+                                            <li><a href="#" title="">HTML</a></li>
+                                            <li><a href="#" title="">PHP</a></li>
+                                            <li><a href="#" title="">CSS</a></li>
+                                            <li><a href="#" title="">Javascript</a></li>
+                                            <li><a href="#" title="">Wordpress</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="job-status-bar">
+                                        <ul class="like-com">
+                                            <li>
+                                                <a href="#"><i class="la la-heart"></i> Like</a>
+                                            </li>
+                                        </ul>
+                                        <!--<a><i class="la la-eye"></i>Views 50</a>-->
+                                        <a href="#" title=""><i class="la la-bookmark"></i></a>
+                                    </div>
+                                </div>
+                                {% endfor %}<!--post-bar end-->
+                                <div class="process-comm">
+                                    <div class="spinner">
+                                        <div class="bounce1"></div>
+                                        <div class="bounce2"></div>
+                                        <div class="bounce3"></div>
+                                    </div>
+                                </div><!--process-comm end-->
+                            </div><!--posts-section end-->
+                        </div><!--main-ws-sec end-->
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="right-sidebar">
+                            <div class="widget widget-jobs">
+                                <div class="sd-title">
+                                    <h3>Top Jobs</h3>
+                                    <i class="la la-ellipsis-v"></i>
+                                </div>
+                                <div class="jobs-list">
+                                    <div class="job-info">
+                                        <div class="job-details">
+                                            <h3>Senior Product Designer</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+                                        </div>
+                                        <div class="hr-rate">
+                                            <span>$25/hr</span>
+                                        </div>
+                                    </div><!--job-info end-->
+                                    <div class="job-info">
+                                        <div class="job-details">
+                                            <h3>Senior UI / UX Designer</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+                                        </div>
+                                        <div class="hr-rate">
+                                            <span>$25/hr</span>
+                                        </div>
+                                    </div><!--job-info end-->
+                                    <div class="job-info">
+                                        <div class="job-details">
+                                            <h3>Junior Seo Designer</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+                                        </div>
+                                        <div class="hr-rate">
+                                            <span>$25/hr</span>
+                                        </div>
+                                    </div><!--job-info end-->
+                                    <div class="job-info">
+                                        <div class="job-details">
+                                            <h3>Senior PHP Designer</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+                                        </div>
+                                        <div class="hr-rate">
+                                            <span>$25/hr</span>
+                                        </div>
+                                    </div><!--job-info end-->
+                                    <div class="job-info">
+                                        <div class="job-details">
+                                            <h3>Senior Developer Designer</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+                                        </div>
+                                        <div class="hr-rate">
+                                            <span>$25/hr</span>
+                                        </div>
+                                    </div><!--job-info end-->
+                                </div><!--jobs-list end-->
+                            </div><!--widget-jobs end-->
+                            <div class="widget widget-jobs">
+                                <div class="sd-title">
+                                    <h3>Most Viewed This Week</h3>
+                                    <i class="la la-ellipsis-v"></i>
+                                </div>
+                                <div class="jobs-list">
+                                    <div class="job-info">
+                                        <div class="job-details">
+                                            <h3>Senior Product Designer</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+                                        </div>
+                                        <div class="hr-rate">
+                                            <span>$25/hr</span>
+                                        </div>
+                                    </div><!--job-info end-->
+                                    <div class="job-info">
+                                        <div class="job-details">
+                                            <h3>Senior UI / UX Designer</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+                                        </div>
+                                        <div class="hr-rate">
+                                            <span>$25/hr</span>
+                                        </div>
+                                    </div><!--job-info end-->
+                                    <div class="job-info">
+                                        <div class="job-details">
+                                            <h3>Junior Seo Designer</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+                                        </div>
+                                        <div class="hr-rate">
+                                            <span>$25/hr</span>
+                                        </div>
+                                    </div><!--job-info end-->
+                                </div><!--jobs-list end-->
+                            </div><!--widget-jobs end-->
+                        </div><!--right-sidebar end-->
+                    </div>
+                </div>
+            </div><!-- main-section-data end-->
+        </div>
+    </div>
 {% endblock %}
