--- a/templates/forum/new.html.twig
+++ b/templates/forum/new.html.twig
@@ -5,7 +5,7 @@
     Create a new Forum
 {% endblock %}
 {% block gobackbtn %}
-    <a href="{{ path("forum_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+    <a href="{{ path("dashbord_forum_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
         <i class="fas fa-arrow-left fa-sm text-white-50"></i> Go back
     </a>
 {% endblock %}
