--- a/templates/frontoffice/post/_form.html.twig
+++ b/templates/frontoffice/post/_form.html.twig
@@ -1,7 +1,8 @@
-{{ form_start(form) }}
+{{ form_start(form,{'attr':{'action': path('home_post_new') ,'id':'post_form'}}) }}
     {{ form_widget(form.title,{'attr': {'class': 'form-control w-100 mt-2 mb-2','placeholder': 'Title'}})}}
     {{ form_widget(form.description,{'attr': {'class': 'form-control w-100 mt-2 mb-2','placeholder': 'Description'}})}}
-    {{ form_row(form.tags,{'attr': {'class': 'form-control w-100 mt-2 mb-2'}})}}
+
+
 <div style="width: 100%; display:flex; justify-content: flex-end">
     <button class="btn btn-primary btn-sm shadow-sm mt-2 mb-2">
         <i class="fas fa-{{ icon|default('save') }}"></i>
