--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block gobackbtn %}
-    <a href="{{ path("post_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+    <a href="{{ path("dashbord_post_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
         <i class="fas fa-arrow-left fa-sm text-white-50"></i> Go back
     </a>
 {% endblock %}
