--- a/templates/comment/new.html.twig
+++ b/templates/comment/new.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block gobackbtn %}
-    <a href="{{ path("comment_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+    <a href="{{ path("dashbord_comment_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
         <i class="fas fa-arrow-left fa-sm text-white-50"></i> Go back
     </a>
 {% endblock %}
