--- a/templates/forum/_form.html.twig
+++ b/templates/forum/_form.html.twig
@@ -1,13 +1,29 @@
-{{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+{{ form_start(form) }}
+<!--<div class="row">
+    <div class="col-md-12">
+        <div class="card card-outline card-info">
+            <div class="card-header">
+                <h3 class="card-title">
+                    Summernote
+                </h3>
+            </div>
+
+            <div class="card-body">
+              <textarea id="summernote">
+
+              </textarea>
+            </div>
+            <div class="card-footer">
+                Visit <a href="{ asset("https://github.com/summernote/summernote/")}}">Summernote</a> documentation for more examples and information about the plugin.
+            </div>
+        </div>
+    </div>
+
+</div>-->
+
 {{ form_widget(form.title,{'attr': {'class': 'form-control w-100 mt-2 mb-2','placeholder': 'Title'}})}}
-<div class="alert alert-danger">
-    {{ form_errors(form.title) }}
-</div>
 {{form_widget(form.description,{'attr': {'class': 'form-control w-100 mt-2 mb-2','placeholder': 'Description'}})}}
-<div class="alert alert-danger">
-    {{ form_errors(form.description) }}
-</div>
-{{form_row(form.Recruiter,{'attr': {'class': 'form-control w-100 mt-2 mb-2'}})}}
+
 
 
 
