--- a/templates/forum/edit.html.twig
+++ b/templates/forum/edit.html.twig
@@ -4,7 +4,7 @@
 {% block gobackbtn %}
     {{ include('forum/_delete_form.html.twig') }}
 
-    <a href="{{ path("forum_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+    <a href="{{ path("dashbord_forum_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
         <i class="fas fa-arrow-left fa-sm text-white-50"></i> Go back
     </a>
 {% endblock %}
