--- a/templates/forum/show.html.twig
+++ b/templates/forum/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Forum{% endblock %}
 {% block gobackbtn %}
-<a href="{{ path("forum_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+<a href="{{ path("dashbord_forum_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
     <i class="fas fa-arrow-left fa-sm text-white-50"></i> Go back
 </a>
 {% endblock %}
@@ -30,7 +30,7 @@
         </tbody>
     </table>
     <div style="width: 100%; display:flex; justify-content: flex-end">
-        <a href="{{ path('forum_edit', {'id': forum.id}) }}"><button type="button" class="btn-sm shadow-sm btn btn-primary mt-2 mb-2 mr-2"><i class="far fa-edit"></i> Edit</button></a>
+        <a href="{{ path('dashbord_forum_edit', {'id': forum.id}) }}"><button type="button" class="btn-sm shadow-sm btn btn-primary mt-2 mb-2 mr-2"><i class="far fa-edit"></i> Edit</button></a>
         {{ include('forum/_delete_form.html.twig') }}
     </div>
 
