--- a/templates/frontoffice/comment/_delete_form.html.twig
+++ b/templates/frontoffice/comment/_delete_form.html.twig
@@ -1,8 +1,9 @@
-<form style="display: inline-block" method="post" action="{{ path('dashbord_comment_delete', {'id': comment.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form style="display: inline-block" method="post" action="{{ path('home_comment_delete', {'id': comment.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ comment.id) }}">
     <button class="btn btn-danger d-none d-sm-inline-block btn-sm btn-primary shadow-sm mt-2 mb-2">
         <i class="far fa-trash-alt"></i>
-
+        Delete
     </button>
 </form>
