--- a/templates/frontoffice/comment/show.html.twig
+++ b/templates/frontoffice/comment/show.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'frontoffice/front/index.html.twig' %}
 
 {% block title %}Comment{% endblock %}
 {% block gobackbtn %}
-    <a href="{{ path("dashbord_comment_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+    <a href="{{ path("front_comment_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
         <i class="fas fa-arrow-left fa-sm text-white-50"></i> Go back
     </a>
 {% endblock %}
@@ -25,12 +25,14 @@
                 <th>Date</th>
                 <td>{{ comment.date ? comment.date|date('Y-m-d') : '' }}</td>
             </tr>
-
+            <tr>
+                <th>Likes</th>
+                <td>{{ comment.likes }}</td>
+            </tr>
         </tbody>
     </table>
     <div style="width: 100%; display:flex; justify-content: flex-end">
-       <!-- <a href="{ path('dashbord_comment_edit', {'id': comment.id}) }}"><button type="button" class="btn-sm shadow-sm btn btn-primary mt-2 mb-2 mr-2"><i class="far fa-edit"></i> Edit</button></a>-->
+        <a href="{{ path('comment_edit', {'id': comment.id}) }}"><button type="button" class="btn-sm shadow-sm btn btn-primary mt-2 mb-2 mr-2"><i class="far fa-edit"></i> Edit</button></a>
         {{ include('comment/_delete_form.html.twig') }}
     </div>
-
 {% endblock %}
