--- a/templates/frontoffice/post/edit.html.twig
+++ b/templates/frontoffice/post/edit.html.twig
@@ -1,11 +1,12 @@
-{{ form_start(form) }}
+{{ form_start(form,{'attr':{'action': path('home_post_edit',{'id':post.id}) }}) }}
     {{ form_widget(form.title,{'attr': {'class': 'form-control w-100 mt-2 mb-2','placeholder': 'Title'}})}}
     {{ form_widget(form.description,{'attr': {'class': 'form-control w-100 mt-2 mb-2','placeholder': 'Description'}})}}
-    {{ form_row(form.tags,{'attr': {'class': 'form-control w-100 mt-2 mb-2'}})}}
+
+
+
 <div style="width: 100%; display:flex; justify-content: flex-end">
     <button class="btn btn-primary btn-sm shadow-sm mt-2 mb-2">
-        <i class="fas fa-{{ icon|default('save') }}"></i>
-        {{ button_label|default('Save') }}
+        Update
     </button>
 </div>
 {{ form_end(form) }}
