--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -5,7 +5,7 @@
 {% block gobackbtn %}
     {{ include('post/_delete_form.html.twig') }}
 
-    <a href="{{ path("post_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+    <a href="{{ path("dashbord_post_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
         <i class="fas fa-arrow-left fa-sm text-white-50"></i> Go back
     </a>
 {% endblock %}
