--- a/project/show.html.twig
+++ b/project/show.html.twig
@@ -1,10 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Project{% endblock %}
-
+{% block gobackbtn %}
+    <a href="{{ path("project_index") }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+        <i class="fas fa-arrow-left fa-sm text-white-50"></i> Go back
+    </a>
+{% endblock %}
 {% block main %}
     <h1>Project</h1>
-
     <table class="table">
         <tbody>
             <tr>
@@ -26,9 +29,32 @@
         </tbody>
     </table>
 
-    <a href="{{ path('project_index') }}">back to list</a>
+    <div style="width: 100%; display:flex; justify-content: flex-end">
+        <a href="{{ path('project_edit', {'id': project.id}) }}"><button type="button" class="btn-sm shadow-sm btn btn-primary mt-2 mb-2 mr-2"><i class="far fa-edit"></i> Edit</button></a>
+        {{ include('project/_delete_form.html.twig') }}
+    </div>
+    <div style="width: 100%; display:flex; justify-content: flex-end"><a href="{{ path('calendar_new',{'id': project.id}) }}"><button type="button" class="btn btn-dark">Create Deadline</button></a></div>
+    <div style="width: 100%; display:flex; justify-content: flex-end"><a href="{{ path('calendar_show',{'id': project.id}) }}"><button type="button" class="btn btn-secondary">Show Calendar</button></a></div> 
 
-    <a href="{{ path('project_edit', {'id': project.id}) }}">edit</a>
 
-    {{ include('project/_delete_form.html.twig') }}
+    <h4>Liste Equipe</h4>
+        <table class="table">
+
+            <tr>
+                <th>id </th>
+                <th>pseudo</th>
+                <th>description</th>
+                <th></th>
+
+            </tr>
+            {% for members in project.members %}
+            <tr>
+                <th>{{ members.id }}</th>
+                <th>{{ members.pseudo }}</th>
+                <th>{{ members.Localisation }}</th>
+                <th><a href="{{ path('member_delete', {'id': members.id}) }}"  ></a>{{ include('member/_delete_form.html.twig') }}</th>
+            </tr>
+            {% endfor %}
+        </table>
+
 {% endblock %}
