Added 404 and 403 pages
And a few minor changes.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -200,8 +200,8 @@
                             <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                                 <div class="bg-white py-2 collapse-inner rounded">
                                     <h6 class="collapse-header">Manage forums</h6>
-                                    <a class="collapse-item" href="{{ path("forum_new") }}">Add a forum</a>
-                                    <a class="collapse-item" href="{{ path("forum_index") }}">Browse forums</a>
+                                    <a class="collapse-item" href="{{ path("dashbord_forum_new") }}">Add a forum</a>
+                                    <a class="collapse-item" href="{{ path("dashbord_forum_index") }}">Browse forums</a>
                                 </div>
                             </div>
                         </li>
@@ -216,8 +216,8 @@
                             <div id="collapseThree2" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                                 <div class="bg-white py-2 collapse-inner rounded">
                                     <h6 class="collapse-header">Manage posts</h6>
-                                    <a class="collapse-item" href="{{ path("post_new") }}">Add a post</a>
-                                    <a class="collapse-item" href="{{ path("post_index") }}">Browse posts</a>
+                                    <a class="collapse-item" href="{{ path("dashbord_post_new") }}">Add a post</a>
+                                    <a class="collapse-item" href="{{ path("dashbord_post_index") }}">Browse posts</a>
                                 </div>
                             </div>
                         </li>
@@ -232,8 +232,8 @@
                             <div id="collapseThree3" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                                 <div class="bg-white py-2 collapse-inner rounded">
                                     <h6 class="collapse-header">Manage comments</h6>
-                                    <a class="collapse-item" href="{{ path("comment_new") }}">Add a comment</a>
-                                    <a class="collapse-item" href="{{ path("comment_index") }}">Browse comments</a>
+                                    <a class="collapse-item" href="{{ path("dashbord_comment_new") }}">Add a comment</a>
+                                    <a class="collapse-item" href="{{ path("dashbord_comment_index") }}">Browse comments</a>
                                 </div>
                             </div>
                         </li>
