--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -72,7 +72,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" title="" class="not-box-open">
+                                <a href="{{ path('home_forum_index') }}" title="" class="not-box-open">
                                     <span><i class="la la-envelope"></i></span>
                                     Forum
                                 </a>
@@ -185,7 +185,7 @@
 
                         {% block user_settings %}
                         <div class="user-account-settingss">
-                            <h3><a href="{{ path("post_index") }}">Go to dashboard</a></h3>
+                            <h3><a href="{{ path("test_index") }}">Go to dashboard</a></h3>
 
                             <h3>Custom Status</h3>
                             <div class="search_form">
